--- a/package.json
+++ b/package.json
@@ -88,7 +88,9 @@
   },
   "dependencies": {
     "call-bind": "^1.0.0",
-    "define-properties": "^1.1.3"
+    "define-properties": "^1.1.3",
+    "is-nan": "^1.3.2",
+    "math.expm1": "git+https://github.com/es-shims/Math.expm1#main"
   },
   "auto-changelog": {
     "output": "CHANGELOG.md",
